# AiEXP-rag

./: .gitignore  LICENSE  README.md  pyproject.toml  reqirements.txt  Übungsaufgaben.md
src/: app.py  config.py  ingest.py  metadata.py  rag.py  reset_db.py  test_suite.py  utils.py  vector.py
static/: style.css
templates/: index.html  preview.html
