[project]
name = "ai-librarian"
version = "0.1.0"
description = "A POC RAG tool for personal document management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "jinja2",
    "chromadb",
    "langchain-community",
    "langchain-chroma",
    "langchain-huggingface",
    "langchain-ollama",
    "pypdf",
    "ebooklib",
    "bs4",
    "sentence-transformers",
    "unstructured",
    "libsass",
    "pypdf2>=3.0.1",
    "httpx>=0.28.1",
]
